# 42

./: .gitignore  .gitmodules  README.md  presentation  resources  setup_script.sh
C++/: dockerfile  main.cpp
C++_projects/beginner/CGPA_calculator/: CMakeLists.txt
C++_projects/beginner/CGPA_calculator/include/: cgpacalculator.hpp
C++_projects/beginner/CGPA_calculator/src/: cgpacalculator.cpp  main.cpp
Philosophers/: Makefile  README.md  check_philo.c  eat.c  ft_atoi.c  ft_calloc.c  init_prog.c  main.c  philo  philosophers.h  routine.c  time.c
assembly/: .asm-lsp.toml  README.md  first  temp
drivers_and_interrupts/: .Module.symvers.cmd  .drivers-and-interrupts.ko.cmd  .drivers-and-interrupts.mod.cmd  .drivers-and-interrupts.mod.o.cmd  .drivers-and-interrupts.o.cmd  .modules.order.cmd  Makefile  drivers-and-interrupts.c  drivers-and-interrupts.ko  drivers-and-interrupts.mod.c  keylogger.c  keylogger.h  modules.order
examples/: Dockerfile
fractol/: Makefile  README.md  fractol
ft_ping/: 1  Makefile  checksum.c  defines.h  dns.c  error.c  file  ft_ping  ft_ping.h  handlers.c  main.c  resources  test.c  utils.c
ft_printf/: Makefile  a.out  ft_auxiliary.c  ft_printf.c  ft_printf.h  ft_utilities.c  main.c
ft_traceroute/: .clang-format  Makefile  TODO.md  defines.h  ft_traceroute  ft_traceroute.h  ft_traceroute.vim  libft.tar  main.c  utils.c
get_next_line/: README.md  a.out  get_next_line.c  get_next_line.h  get_next_line.h.gch  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  main.c  test.c  test3
(+561 files in other folders)
